k8s/hw5/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: multiool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image:  dockerhub.timeweb.cloud/wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
