k8s/hw5/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool
  ports:
    - name: backend-80
      protocol: TCP
      port: 80
      targetPort: 8080
