k8s/hw5/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: nginx
  ports:
    - name: frontend-80
      protocol: TCP
      port: 80
      targetPort: 80
